--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
-
   },
-  "engines": {"node": "10.1.0"},
+  "engines": {
+    "node": "10.1.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
